syntax = "proto3";

package auth;

option go_package = "github.com/vocal-tracker/auth-service/proto";

// Auth service definition
service AuthService {
  // Register a new user
  rpc Register(RegisterRequest) returns (AuthResponse);
  
  // Login user
  rpc Login(LoginRequest) returns (AuthResponse);
  
  // Validate JWT token
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
  
  // Get user profile
  rpc GetProfile(GetProfileRequest) returns (UserResponse);
}

// Request messages
message RegisterRequest {
  string email = 1;
  string password = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message ValidateTokenRequest {
  string token = 1;
}

message GetProfileRequest {
  uint32 user_id = 1;
}

// Response messages
message AuthResponse {
  bool success = 1;
  string message = 2;
  string token = 3;
  User user = 4;
}

message ValidateTokenResponse {
  bool valid = 1;
  string message = 2;
  uint32 user_id = 3;
  string email = 4;
}

message UserResponse {
  bool success = 1;
  string message = 2;
  User user = 3;
}

// User model
message User {
  uint32 id = 1;
  string email = 2;
  string created_at = 3;
}